Убрал логическую часть из контроллеров
